@@ -15,6 +15,7 @@ Merged from 2.2:
 Merged from 2.1:
  * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
  * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)
+ * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
 
 
 3.4
